--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -18,7 +18,7 @@
 	<div class="page__wrapper">
 		<header class="header">
 			<div class="header__container">
-				<a class="header__logo" href="https://romangrs.github.io/web-larek-frontend/">
+				<a class="header__logo" href="/">
 					<img class="header__logo-image" src="<%=require('../images/logo.svg')%>" alt="Film! logo" />
 				</a>
 				<button class="header__basket">
